[gd_scene load_steps=14 format=2]

[ext_resource path="res://Character Sprites/Mage/Fire_Extra/fire_extra3.png" type="Texture" id=1]
[ext_resource path="res://Character Sprites/Mage/Fire_Extra/fire_extra1.png" type="Texture" id=2]
[ext_resource path="res://Character Sprites/Mage/Fire_Extra/fire_extra2.png" type="Texture" id=3]
[ext_resource path="res://Character Sprites/Mage/Fire_Extra/fire_extra5.png" type="Texture" id=4]
[ext_resource path="res://Character Sprites/Mage/Fire_Extra/fire_extra9.png" type="Texture" id=5]
[ext_resource path="res://Character Sprites/Mage/Fire_Extra/fire_extra8.png" type="Texture" id=6]
[ext_resource path="res://Character Sprites/Mage/Fire_Extra/fire_extra7.png" type="Texture" id=7]
[ext_resource path="res://Character Sprites/Mage/Fire_Extra/fire_extra6.png" type="Texture" id=8]
[ext_resource path="res://Character Sprites/Mage/Fire_Extra/fire_extra4.png" type="Texture" id=9]
[ext_resource path="res://Scripts/PlayerFireExtra.gd" type="Script" id=10]
[ext_resource path="res://Light/Light_texture.webp" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "Explodes",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "Travelling",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0
height = 18.0

[node name="PlayerFireExtra" type="Area2D"]
collision_layer = 256
collision_mask = 0
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Travelling"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 9 )
shape = SubResource( 2 )

[node name="FireTimer" type="Timer" parent="."]
one_shot = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 11 )
color = Color( 1, 0.843137, 0.596078, 1 )

[connection signal="body_entered" from="." to="." method="_on_PlayerFireExtra_body_entered"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
